# lspi-armclang

./: CMakeLists.txt  CMakePresets.json  README.md
lib/: gd32f4xx.sct
lib/inc/: core_cmFunc.h
lib/src/: start.c
src/: main.cpp  systick.h
src/bsp/: CMakeLists.txt  bsp_i2c.cpp  bsp_mpu6050.cpp  bsp_mpu6050.h  bsp_serial.cpp  bsp_serial.h
